# android-ndk

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ndk_sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dlfcn.c  native-lib.c  native-lib.cpp
app/src/main/java/com/example/ndk_sample/: MainActivity.java
app/src/main/java/com/example/ndk_sample/android_process/: DynamicLinkerActivity.java  GetPidActivity.java  GetUidActivity.java  MemoryOptimizationActivity.java
app/src/main/java/com/example/ndk_sample/jni/: DynamicLinkerActivity.java  ExceptionHandling.java  ExceptionHandlingActivity.java  GetLineActivity.java  GetUidActivity.java  JNICallBackArray.java  JNICallBackArrayActivity.java  JNICallBackField.java  JNICallBackFieldActivity.java  JNICallBackMethod.java  JNICallBackMethodActivity.java
app/src/main/res/layout/: activity_exception_handling.xml  activity_get_line.xml  activity_jni_callback_array.xml  activity_jni_callback_field.xml  activity_jni_callback_method.xml  activity_main.xml  activity_memory_optimization.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ndk_sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
